build: backport SRU2026 to Java 8
Revert the Java-compatibility stack to Java 8 while keeping the SRU2026
standards content.

- build.gradle: downgrade Gradle plugins to Java 8-compatible versions
  (quality 5.0.0, axion 1.13.6, spotless 6.13.0), revert Jakarta EE
  dependencies to javax (persistence 2.2, validation 2.0.1.Final), rely on
  the JDK 8-bundled JAXB, and set the manifest source/target to 1.8
- Rename jakarta.* -> javax.* across hand-written code and the generated
  model (JAXB 2.3.1 and javax.persistence 2.2 are 1:1 compatible)
- Replace List.of() with Arrays.asList() (List.of is a Java 9 API)
- Reorder imports to satisfy palantir/spotless after the rename
- .idea/compiler.xml: bytecode target 11 -> 1.8
- CHANGELOG: note the java.time model (vs XMLGregorianCalendar) for
  Prowide Integrator 10 series compatibility

The model retains java.time (not reverted to XMLGregorianCalendar); it
compiles and runs on Java 8 via the custom JAXB adapters. Full build and
the iso20022-core test suite pass on Java 8 (Oracle 1.8.0_381).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>